--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "ejs": "^3.1.10",
     "express": "^5.2.1"
   }, {
-    "scripts": "node --env-file=.env app"
+  "name": "todobackend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node --env-file=.env app.js"
   }
 }
