--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --env-file=.env app.js"
+    "start": "node app.js"
   }
 }
+
+
