--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
+  "name": "todobackend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.2.1"
-  }, {
-  "name": "todobackend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app.js"
   }
 }
-
-
